@@ -6,7 +6,9 @@ import static no.sikt.nva.model.ErrorDetails.Error.PUBLISHER_NOT_IN_CHANNEL_REGI
 import static no.sikt.nva.scrapers.DublinCoreScraper.channelRegister;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import no.sikt.nva.model.BrageLocation;
@@ -16,6 +18,7 @@ import no.sikt.nva.model.WarningDetails;
 import no.sikt.nva.model.WarningDetails.Warning;
 import no.sikt.nva.model.dublincore.DcValue;
 import no.sikt.nva.model.dublincore.DublinCore;
+import no.sikt.nva.model.dublincore.Element;
 import no.sikt.nva.scrapers.BrageNvaLanguageMapper;
 import no.sikt.nva.scrapers.DublinCoreScraper;
 import no.sikt.nva.scrapers.PageConverter;
@@ -32,7 +35,7 @@ public final class DublinCoreValidator {
 
     public static final String VERSION_STRING_NVE = "publishedVersion";
     public static final String DEHYPHENATION_REGEX = "(‐|·|-|\u00AD|&#x20;)";
-    public static final String MISSING_ISSN_AND_TITLE = "Missing issn AND title";
+    public static final String MISSING_VALUES_TO_SEARCH = "Missing values to search in Kanalregister";
     private static final int ONE_DESCRIPTION = 1;
 
     public static List<ErrorDetails> getDublinCoreErrors(DublinCore dublinCore, BrageLocation brageLocation) {
@@ -86,7 +89,7 @@ public final class DublinCoreValidator {
             if (isJournalArticle(dublinCore)) {
                 return getErrorDetailsForJournalArticle(dublinCore, brageLocation);
             }
-            if (isReport(dublinCore) || isBook(dublinCore)) {
+            if (hasPublisher(dublinCore) && isReport(dublinCore) || isBook(dublinCore)) {
                 return getErrorDetailsForReport(dublinCore, brageLocation);
             }
         }
@@ -98,7 +101,6 @@ public final class DublinCoreValidator {
                                                                            BrageLocation brageLocation) {
         var issn = DublinCoreScraper.extractIssn(dublinCore, brageLocation);
         var title = DublinCoreScraper.extractJournal(dublinCore);
-        var isbn = DublinCoreScraper.extractIsbn(dublinCore, brageLocation);
         var possibleChannelRegisterIdentifierByIssn = channelRegister.lookUpInJournalByIssn(issn);
         var possibleChannelRegisterIdentifierByJournal = channelRegister.lookUpInJournalByTitle(title);
         if (nonNull(possibleChannelRegisterIdentifierByIssn)) {
@@ -107,40 +109,40 @@ public final class DublinCoreValidator {
         if (nonNull(possibleChannelRegisterIdentifierByJournal)) {
             return Optional.empty();
         } else {
-            return getErrorDetailsWhenNotInChannelRegister(JOURNAL_NOT_IN_CHANNEL_REGISTER, issn, title, isbn);
+            return getErrorDetailsWhenNotInChannelRegister(JOURNAL_NOT_IN_CHANNEL_REGISTER, issn, title,
+                                                           StringUtils.EMPTY_STRING);
         }
     }
 
     @SuppressWarnings("PMD.PrematureDeclaration")
     private static Optional<ErrorDetails> getErrorDetailsForReport(DublinCore dublinCore, BrageLocation brageLocation) {
-        var isbn = DublinCoreScraper.extractIsbn(dublinCore, brageLocation);
+        var publisher = DublinCoreScraper.extractPublisher(dublinCore);
         var issn = DublinCoreScraper.extractIssn(dublinCore, brageLocation);
         var title = DublinCoreScraper.extractJournal(dublinCore);
-        var possibleChannelRegisterIdentifierByIsbn = channelRegister.lookUpInPublisherByIsbn(isbn);
         var possibleChannelRegisterIdentifierByIssn = channelRegister.lookUpInJournalByIssn(issn);
         var possibleChannelRegisterIdentifierByJournal = channelRegister.lookUpInJournalByTitle(title);
-        if (nonNull(possibleChannelRegisterIdentifierByIsbn)
-            || nonNull(possibleChannelRegisterIdentifierByIssn)
+        if (nonNull(possibleChannelRegisterIdentifierByIssn)
             || nonNull(possibleChannelRegisterIdentifierByJournal)) {
             return Optional.empty();
         } else {
-            return getErrorDetailsWhenNotInChannelRegister(PUBLISHER_NOT_IN_CHANNEL_REGISTER, issn, title, isbn);
+            return getErrorDetailsWhenNotInChannelRegister(PUBLISHER_NOT_IN_CHANNEL_REGISTER, issn, title,publisher);
         }
     }
 
     @NotNull
     private static Optional<ErrorDetails> getErrorDetailsWhenNotInChannelRegister(Error error, String journalIssn,
-                                                                                  String journalTitle, String isbn) {
-        if (nonNull(journalIssn)) {
-            return Optional.of(new ErrorDetails(error, List.of(journalIssn)));
-        }
-        if (nonNull(journalTitle)) {
-            return Optional.of(new ErrorDetails(error, List.of(journalTitle)));
-        }
-        if (nonNull(isbn)) {
-            return Optional.of(new ErrorDetails(error, List.of(isbn)));
+                                                                                  String journalTitle,
+                                                                                  String publisher) {
+        var valuesList = new ArrayList<>();
+        valuesList.add(journalIssn);
+        valuesList.add(journalTitle);
+        valuesList.add(publisher);
+        var nonNullValuesList =
+            valuesList.stream().filter(Objects::nonNull).map(Object::toString).collect(Collectors.toList());
+        if (!nonNullValuesList.isEmpty()) {
+            return Optional.of(new ErrorDetails(error, nonNullValuesList));
         } else {
-            return Optional.of(new ErrorDetails(error, List.of(MISSING_ISSN_AND_TITLE)));
+            return Optional.of(new ErrorDetails(error, Collections.singletonList(MISSING_VALUES_TO_SEARCH)));
         }
     }
 
@@ -303,6 +305,11 @@ public final class DublinCoreValidator {
 
     private static boolean isReport(DublinCore dublinCore) {
         return DublinCoreScraper.extractType(dublinCore).get(0).equals(BrageType.REPORT.getValue());
+    }
+
+    private static boolean hasPublisher(DublinCore dublinCore) {
+        var publisher = DublinCoreScraper.extractPublisher(dublinCore);
+        return nonNull(publisher) && publisher.equals(Element.PUBLISHER.getValue());
     }
 
     private static boolean isBook(DublinCore dublinCore) {
